--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-   <!-- Bootstrap Icon -->
+    <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
@@ -17,7 +19,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Rahmahani</a>
+        <a class="navbar-brand" href="#">My Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -65,8 +67,8 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eaque at, ipsam odio ex eos quae laboriosam autem animi cupiditate.</div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eaque at, ipsam odio ex eos quae laboriosam autem animi cupiditate.</div>
+          <div class="col-md-4" data-aos="fade-left"  data-aos-delay="200">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, totam? Odit explicabo voluptatibus error necessitatibus numquam dicta laborum quidem! Adipisci voluptatem fuga enim obcaecati ipsum assumenda cupiditate vitae
             blanditiis totam?
           </div>
@@ -92,7 +94,7 @@
         </div>
         <div class="row justify-content-md-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img src="img/img1.jpg" class="card-img-top" alt="Projek Pertama" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -100,7 +102,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="img/img2.jpg" class="card-img-top" alt="Projek Kedua" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
               <img src="img/img3.jpg" class="card-img-top" alt="Projek Ketiga" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,7 +118,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
               <img src="img/img4.jpg" class="card-img-top" alt="Projek Keempat" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +126,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="400">
               <img src="img/img5.jpg" class="card-img-top" alt="Projek Kelima" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -142,6 +144,77 @@
       ></path>
     </svg>
     <!-- Akhir Galery -->
+
+    <!-- Foto -->
+    <section id="foto">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Foto</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam1.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam2.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam3.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam4.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam5.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam6.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam7.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam8.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam9.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam10.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gundam11.jpg" alt="Foto" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!-- Akhir Foto -->
 
     <!-- Contact -->
     <section id="contact">
@@ -195,6 +268,22 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'fade-down';
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbyBDcLG_IWXhYbMDv7G0BjIVzObmVnWFaIEQlaR9K_AeD56ve7jSbg1PV0JE2CP16JPsQ/exec'
       const form = document.forms['contact-form']
